--- a/Codes/network_topology_analysis.ipynb
+++ b/Codes/network_topology_analysis.ipynb
@@ -7724,6 +7724,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 296,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40.88927702272619"
+      ]
+     },
+     "execution_count": 296,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.average([d for n, d in G.out_degree(weight='corr') if d > 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 977,
    "metadata": {},
    "outputs": [
@@ -7947,6 +7967,26 @@
    "outputs": [],
    "source": [
     "centralities = nx.betweenness_centrality(G,weight='corr')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 290,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.000743985270434971"
+      ]
+     },
+     "execution_count": 290,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.average(list(centralities.values()))"
    ]
   },
   {
